--- a/overops-agent/pom.xml
+++ b/overops-agent/pom.xml
@@ -7,29 +7,22 @@
         <groupId>com.overops.plugins</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>teamcity-server</artifactId>
+    <artifactId>overops-agent</artifactId>
     <packaging>jar</packaging>
+
     <dependencies>
 
         <dependency>
             <groupId>com.overops.plugins</groupId>
-            <artifactId>teamcity-common</artifactId>
+            <artifactId>overops-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
-            <artifactId>server-api</artifactId>
+            <artifactId>agent-api</artifactId>
             <version>${teamcity-version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jetbrains.teamcity</groupId>
-            <artifactId>server-web-api</artifactId>
-            <version>${teamcity-version}</version>
-            <type>war</type>
             <scope>provided</scope>
         </dependency>
 
@@ -39,5 +32,6 @@
             <version>${teamcity-version}</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
