--- a/overops-common/pom.xml
+++ b/overops-common/pom.xml
@@ -7,6 +7,6 @@
         <groupId>com.overops.plugins</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>teamcity-common</artifactId>
+    <artifactId>overops-common</artifactId>
     <packaging>jar</packaging>
 </project>
