--- a/overops-server/pom.xml
+++ b/overops-server/pom.xml
@@ -7,22 +7,29 @@
         <groupId>com.overops.plugins</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>teamcity-agent</artifactId>
+    <artifactId>overops-server</artifactId>
     <packaging>jar</packaging>
-
     <dependencies>
 
         <dependency>
             <groupId>com.overops.plugins</groupId>
-            <artifactId>teamcity-common</artifactId>
+            <artifactId>overops-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains.teamcity</groupId>
-            <artifactId>agent-api</artifactId>
+            <artifactId>server-api</artifactId>
             <version>${teamcity-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.teamcity</groupId>
+            <artifactId>server-web-api</artifactId>
+            <version>${teamcity-version}</version>
+            <type>war</type>
             <scope>provided</scope>
         </dependency>
 
@@ -32,6 +39,5 @@
             <version>${teamcity-version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
