--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.overops.plugins</groupId>
     <artifactId>teamcity</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>pom</packaging>
 
     <name>OverOps plugin</name>
@@ -18,7 +18,7 @@
 
     <properties>
         <teamcity-version>2018.2</teamcity-version>
-        <version.takipi>2.23.0</version.takipi>
+        <version.takipi>2.30.1</version.takipi>
     </properties>
     <repositories>
         <repository>
