--- a/overops-agent/pom.xml
+++ b/overops-agent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>teamcity</artifactId>
         <groupId>com.overops.plugins</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
     <artifactId>overops-agent</artifactId>
     <packaging>jar</packaging>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.overops.plugins</groupId>
             <artifactId>overops-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
 
