--- a/overops-common/pom.xml
+++ b/overops-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>teamcity</artifactId>
         <groupId>com.overops.plugins</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
     <artifactId>overops-common</artifactId>
     <packaging>jar</packaging>
