OOE-12 Update takipi.version to get test connection fix

--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 
     <properties>
         <teamcity-version>2018.2</teamcity-version>
-        <version.takipi>2.31.0</version.takipi>
-        <version.reportservice>2.33.0</version.reportservice>
+        <version.takipi>2.33.0</version.takipi>
     </properties>
     <repositories>
         <repository>
@@ -58,7 +57,7 @@
         <dependency>
             <groupId>com.takipi</groupId>
             <artifactId>report-service</artifactId>
-            <version>${version.reportservice}</version>
+            <version>${version.takipi}</version>
         </dependency>
 
     </dependencies>
